[tool.poetry]
name = "quasi-monte-carlo"
version = "0.1.0"
description = ""
authors = ["Andrea Cassotti <cassottiandrea@hotmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pipe = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
